WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276955
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/fieldset-baseline-alignment.html
https://bugs.webkit.org/show_bug.cgi?id=276955
Summary
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/fieldset-baseline-...
alan
Reported
2024-07-23 07:28:08 PDT
ssia
Attachments
Patch
(3.22 KB, patch)
2024-07-23 07:40 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.22 KB, patch)
2024-07-23 10:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-07-23 07:40:27 PDT
Created
attachment 471944
[details]
Patch
alan
Comment 2
2024-07-23 10:28:10 PDT
Created
attachment 471947
[details]
[fast-cq]Patch
EWS
Comment 3
2024-07-23 14:29:55 PDT
Committed
281259@main
(30d2bb50e9ef): <
https://commits.webkit.org/281259@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471947
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-07-23 14:30:16 PDT
<
rdar://problem/132353000
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug