[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/fieldset-baseline-alignment.html https://bugs.webkit.org/show_bug.cgi?id=276955

Reviewed by Antti Koivisto.

Current behavior:
  inline formatting context root floors baseline to int.
  regular block container returns fractional value when the block itself has non-integral logical top value.

This patch aligns regular block container baseline behavior with block containers acting as IFC roots.

* LayoutTests/TestExpectations: webkit.org/b/276915 takes care of fieldset baseline, while this change makes sure -expectation.html renders the same way.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::firstLineBaseline const):
(WebCore::RenderBlock::lastLineBaseline const):

Canonical link: https://commits.webkit.org/281259@main