Source/WebCore/rendering/RenderBlock.cpp
@@ -2502,7 +2502,7 @@ std::optional<LayoutUnit> RenderBlock::firstLineBaseline() const
         if (child->isLegend() && child->isExcludedFromNormalLayout())
             continue;
         if (auto baseline = child->firstLineBaseline())
-            return LayoutUnit { child->logicalTop() + baseline.value() };
+            return LayoutUnit { floorToInt(child->logicalTop() + baseline.value()) };
     }
     return std::optional<LayoutUnit>();
 }
@@ -2519,7 +2519,7 @@ std::optional<LayoutUnit> RenderBlock::lastLineBaseline() const
         if (child->isLegend() && child->isExcludedFromNormalLayout())
             continue;
         if (auto baseline = child->lastLineBaseline())
-            return LayoutUnit { baseline.value() + child->logicalTop() };
+            return LayoutUnit { floorToInt(child->logicalTop() + baseline.value()) };
     } 
     return std::optional<LayoutUnit>();
 }
